--- a/css/style.css
+++ b/css/style.css
@@ -15896,6 +15896,18 @@ th {
 .get-support-info.footer-support {
   flex-direction: row;
 }
+.google-map-one {
+  position: relative;
+  display: block;
+  border: none;
+  height: 785px;
+  width: 100%;
+  margin-top: 40px;
+}
+.google-map iframe {
+  width: 100% !important;
+  height: 700px !important;
+}
 @media (max-width: 992px) {
   .footer-top-area {
     padding-top: 50px;
