--- a/css/style.css
+++ b/css/style.css
@@ -3861,8 +3861,8 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 
 /* breadcrumb-area-2 */
 .ltn__breadcrumb-area-2 {
-  padding-top: 250px;
-  padding-bottom: 130px;
+  padding-top: 200px;
+  padding-bottom: 100px;
 }
 
 .ltn__breadcrumb-inner-2 {
@@ -3922,8 +3922,8 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 ---------------------------------------------------- */
 @media (max-width: 767px) {
   .ltn__breadcrumb-area-2 {
-    padding-top: 240px;
-    padding-bottom: 80px;
+    padding-top: 150px;
+    padding-bottom: 70px;
   }
   .ltn__breadcrumb-inner-2 {
     -webkit-box-orient: vertical;
@@ -6575,7 +6575,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid #eee;
 }
@@ -6589,10 +6589,10 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 }
 
 .ltn__utilize-buttons {
-  border-top: 1px solid var(--border-color-1);
-  padding: 5px 0px 20px;
-  margin: 30px 0;
-  border-bottom: 1px solid var(--border-color-1);
+  /* border-top: 1px solid var(--border-color-1);  */
+  padding: 0px 0px 0px;
+  margin: 15px 0;
+  /* border-bottom: 1px solid var(--border-color-1); */
 }
 .ltn__utilize-buttons ul {
   padding: 0;
@@ -6731,7 +6731,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
     min-width: 280px;
   }
   .ltn__top-bar-menu ul li {
-    margin: 0 20px 0 0;
+    margin: 0 0px 0 0;
   }
 }
 
@@ -6756,8 +6756,9 @@ ul.wp-block-latest-posts.is-grid.alignwide {
     line-height: 20px;
   }
   .ltn__drop-menu ul li ul {
-    left: 50%;
-    right: 50%;
+    left: 59% !important;
+    right: 52% !important;
+    left: 57% !important;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -6790,9 +6791,6 @@ ul.wp-block-latest-posts.is-grid.alignwide {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
     margin: 10px 0 30px;
   }
   .ltn__logo-right-menu-option .ltn__header-options,
@@ -9328,7 +9326,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 .ltn__social-media-2 ul li {
   list-style: none;
   display: inline-block;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 .ltn__social-media-2 ul li a {
   background-color: var(--section-bg-1);
@@ -11898,7 +11896,7 @@ blockquote::before {
 
 @media (max-width: 767px) {
   .contact-form-box {
-    padding: 40px 25px 50px;
+    padding: 25px;
   }
 }
 
@@ -15705,6 +15703,7 @@ input.cart-plus-minus-box {
   }
   [type="submit"].btn {
     padding: 15px 30px;
+    width: 100%;
   }
 }
 
@@ -15908,11 +15907,66 @@ th {
   width: 100% !important;
   height: 700px !important;
 }
+.site-logo img {
+  max-width: 200px;
+  object-fit: contain;
+}
+.footer-item {
+  display: flex;
+  align-items: center;
+}
+.footer-item i {
+  color: var(--ltn__secondary-color);
+  font-size: 14px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid var(--ltn__secondary-color);
+  border-radius: 50%;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer_contact_w {
+  width: calc(100% - 30px);
+}
+.footer_contact ul li span {
+  font-weight: 700;
+  margin-right: 20px;
+}
+.footer_contact li::marker {
+  color: #071c1f !important;
+}
+.footer_contact ul {
+  padding-left: 0px !important;
+}
 @media (max-width: 992px) {
   .footer-top-area {
     padding-top: 50px;
   }
   .footer-widget {
     margin-bottom: 30px;
+  }
+  .input-item.ltn__custom-icon::before {
+    top: 40%;
+  }
+  .btn-wrapper {
+    margin-top: 2px !important;
+  }
+  .ltn__top-bar-menu-location,
+  .ltn__social-media-icons {
+    display: none !important;
+  }
+  .ltn__car-dealer-form-area {
+    padding-bottom: 40px;
+    padding-top: 40px;
+  }
+  .ltn__login-area {
+    padding-bottom: 50px !important;
+  }
+}
+@media (max-width: 450px) {
+  .ltn__header-middle-area .get-support .get-support-info.phone-info {
+    display: none !important;
   }
 }
